# forsaken-mail-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
public/: index.html
public/css/: app.css
public/js/: app.js
src/: address.rs  config.rs  http_api.rs  mail_parser.rs  main.rs  smtp_server.rs  store.rs
