[package]
name = "forsaken-mail-rust"
version = "1.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
include_dir = "0.7"
mailparse = "0.15"
mime_guess = "2"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
